--- a/black-min-theme.conf
+++ b/black-min-theme.conf
@@ -1,5 +1,5 @@
 #
-# initramfs-theme.conf
+# black-min-theme.conf
 # Theme configuration file for the rEFInd boot menu
 #
 
@@ -32,7 +32,7 @@ hideui label singleuser safemode hwtest arrows hints editor badges
 # in icons.
 # Default is "icons".
 #
-icons_dir themes/black/icons
+icons_dir themes/black-min/icons
 
 # Use a custom title banner instead of the rEFInd icon and name. The file
 # path is relative to the directory where refind.efi is located. The color
@@ -44,13 +44,13 @@ icons_dir themes/black/icons
 # limited by the underlying libraries; some files, like progressive JPEGs,
 # will not work.
 #
-banner themes/black/banner.png
+banner themes/black-min/banner.png
 
 # Specify how to handle banners that aren't exactly the same as the screen
 # size:
 #  noscale     - Crop if too big, show with border if too small
 #  fillscreen  - Fill the screen
-# Default is noscale
+# default is fillscreen
 #
 banner_scale fillscreen
 
@@ -78,8 +78,10 @@ big_icon_size 100
 # 24, 8, 4, or 1 bits. The PNG or ICNS format is required if you need
 # transparency support (to let you "see through" to a full-screen banner).
 #
-selection_big   themes/black/selection-big.png
-selection_small themes/black/selection-small.png
+# There are 2 options for selection, shadow (below the icon) and square (around
+# the icon). The default is square, the shadow ones are in the folder named "shadow-selection"
+selection_big   themes/black-min/selection-big.png
+selection_small themes/black-min/selection-small.png
 
 # Set the font to be used for all textual displays in graphics mode.
 # For best results, the font must be a PNG file with alpha channel
@@ -90,7 +92,7 @@ selection_small themes/black/selection-small.png
 # produce display irregularities.
 # The default is rEFInd's built-in font, Luxi Mono Regular 12 point.
 #
-font themes/black/source-code-pro-extralight-42.png
+font themes/black-min/source-code-pro-extralight-42.png
 
 # Use text mode only. When enabled, this option forces rEFInd into text mode.
 # Passing this option a "0" value causes graphics mode to be used. Pasing
@@ -130,6 +132,6 @@ font themes/black/source-code-pro-extralight-42.png
 #                     (or similar) program
 #  netboot          - launch the ipxe.efi tool for network (PXE) booting
 # Default is shell,memtest,gdisk,apple_recovery,windows_recovery,mok_tool,about,hidden_tags,shutdown,reboot,firmware,fwupdate
-#
+# hidden_tags has been enabled so that unwanted efi partitions can be hidden and recovered.
 showtools reboot shutdown hidden_tags
 
